# edr-lite

./: Cargo.toml  README.md
src/: main.rs
src/detector/: rules.rs
