[package]
name = "lolbin-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.38.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
